# netjson-diagrams

./: .gitignore  BRAINSTORM.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SPEC.md  TODO.md  package.json
.github/workflows/: ci.yml  release.yml
apps/vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
apps/vscode-extension/scripts/: copy-wasm.mjs
apps/vscode-extension/src/: convert.ts  detect.ts  extension.ts  preview.ts
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  samples.ts
apps/web/src/components/: Convert.tsx  (+8 more)
crates/netjson_diagrams/: Cargo.toml
crates/netjson_diagrams/src/: detect.rs  ir.rs  label.rs  lib.rs  normalize.rs  paper.rs  render.rs  sprites.rs  wasm.rs
crates/netjson_diagrams/tests/: smoke.rs  snapshots.rs
crates/netjson_diagrams/tests/snapshots/: device_configuration_router.combined.md  device_configuration_router.md  device_configuration_router.puml  device_monitoring_router.combined.md  device_monitoring_router.md  device_monitoring_router.puml  network_collection_mixed.combined.md  network_collection_mixed.md  network_collection_mixed.puml  network_graph_mesh.combined.md  network_graph_mesh.md  network_graph_mesh.puml  network_graph_piv_issuance.combined.md  network_graph_piv_issuance.md  network_graph_piv_issuance.puml  network_routes_basic.combined.md  network_routes_basic.md  network_routes_basic.puml
crates/netjson_diagrams_cli/: Cargo.toml
crates/netjson_diagrams_cli/src/: main.rs
reports/trust/: summary.md
scripts/: build-cli-npm-packages.mjs  bump-version.mjs  fetch-plantuml-runtime.mjs  sync-license.mjs  trust-report.sh
tests/fixtures/: device_configuration_router.json  device_monitoring_router.json  network_collection_mixed.json  network_graph_mesh.json  network_graph_piv_issuance.json  network_routes_basic.json
(+4 files in other folders)
