[workspace]
members = [
    "crates/netjson_diagrams",
    "crates/netjson_diagrams_cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
authors = ["Ari Ugwu <ari@thirteendelta.com>"]
repository = "https://github.com/ariugwu/netjson-diagrams"
homepage = "https://github.com/ariugwu/netjson-diagrams"
keywords = ["netjson", "plantuml", "network", "diagram", "topology"]
categories = ["command-line-utilities", "visualization", "parsing"]
