[package]
name = "netjson_diagrams"
description = "Convert NetJSON documents (NetworkGraph, DeviceConfiguration, DeviceMonitoring, NetworkRoutes, NetworkCollection) into PlantUML deployment/component diagrams."
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "=0.2.121", optional = true }

[features]
default = []
wasm = ["wasm-bindgen"]

[dev-dependencies]
pretty_assertions = "1"
